--- a/style.css
+++ b/style.css
@@ -11,12 +11,14 @@ sans-serif; */
     font-family: "Roboto", sans-serif;}
 
         .fa-arrow-right {
-            height: 30px;
+            height:30px;
             width: 30px;
             background: #000;
             padding: 10px;
             border-radius: 50%;
             color: white;
+            font-size: 16px;
+
         }
     
         .fa-arrow-right:hover {
